--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,46 +7,137 @@
     android:layout_height="match_parent"
     tools:context=".DetailActivity"
     android:orientation="vertical">
-    <Button
-        android:id="@+id/btn_dashboard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dashboard"/>
-    <TextView
-        android:id="@+id/show_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="236dp" />
-    <TextView
-        android:id="@+id/show_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="236dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:background="@color/bone"
+        >
+      <ImageButton
+          android:id="@+id/btn_dashboard"
+          android:layout_width="46dp"
+          android:layout_height="46dp"
+          android:background="@drawable/bg_add"
+          android:src="@drawable/baseline_arrow_back_ios_24"
+          android:layout_marginHorizontal="6dp"
+          />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@drawable/bg_detail"
+    android:padding="20dp"
+    android:layout_marginTop="10dp">
 
-    <TextView
-        android:id="@+id/show_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="177dp"
-        tools:layout_editor_absoluteY="278dp" />
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:orientation="vertical"
+         android:layout_marginTop="20dp">
+         <ImageView
+             android:id="@+id/iv_icon"
+             android:layout_width="50dp"
+             android:layout_height="50dp"
+             android:src="@drawable/baseline_arrow_downward_24"
+             android:background="@drawable/bg_icon"
+             android:layout_gravity="center"/>
 
-    <TextView
-        android:id="@+id/show_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="330dp" />
-    <TextView
-        android:id="@+id/show_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="330dp" />
+         <TextView
+             android:id="@+id/tv_type"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:gravity="center"
+             android:text="Expense"
+             android:layout_marginTop="10dp"
+             android:textSize="20dp" />
+     </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingVertical="20dp"
+            android:paddingHorizontal="10dp">
+            <TextView
+                android:id="@+id/show_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Id"
+                android:textSize="16dp"
+                android:paddingBottom="10dp"
+                />
+            <TextView
+                android:id="@+id/show_amount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="amount"
+                android:paddingBottom="10dp"
+                android:textSize="16dp"
+                tools:layout_editor_absoluteX="177dp"
+                tools:layout_editor_absoluteY="278dp" />
+            <TextView
+                android:id="@+id/show_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="descript"
+                android:paddingBottom="10dp"
+                android:textSize="16dp"
+                tools:layout_editor_absoluteX="174dp"
+                tools:layout_editor_absoluteY="236dp" />
+            <TextView
+                android:id="@+id/show_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:paddingBottom="10dp"
+                android:text="date"
+                tools:layout_editor_absoluteX="180dp"
+                tools:layout_editor_absoluteY="330dp" />
+
+        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="top"
+        android:layout_marginTop="10dp">
+        <Button
+            android:id="@+id/btn_dlt"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            android:textStyle="bold"
+            android:background="@drawable/btn_delete"
+            app:backgroundTint="@null"/>
+      <LinearLayout
+          android:layout_width="0dp"
+          android:layout_weight="1"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal"
+          android:paddingHorizontal="15dp"
+          android:background="@drawable/btn_edit"
+          android:layout_marginLeft="10dp">
+          <Button
+              android:id="@+id/btn_edt"
+              android:layout_marginLeft="10dp"
+              android:layout_width="wrap_content"
+              android:layout_weight="1"
+              android:layout_height="wrap_content"
+              android:text="Edit"
+              android:textStyle="bold"
+              android:textColor="@color/black"
+              android:background="#00000000"
+              app:backgroundTint="@null"/>
+          <ImageView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:src="@drawable/baseline_edit_24"
+              android:layout_gravity="center"/>
+      </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
+
+    </LinearLayout>
 </LinearLayout>
