--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -5,52 +5,167 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".InputActivity">
-    <Button
-        android:id="@+id/btn_dashboard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dashboard"/>
+    tools:context=".InputActivity"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="50dp">
+        android:background="@color/bone"
+        android:padding="20dp">
 
-        <EditText
-            android:id="@+id/inp_amount"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
-            android:hint="Jumlah Pengeluaran"/>
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/inp_desc"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="30dp">
+
+                <ImageButton
+                    android:id="@+id/btn_dashboard"
+                    android:layout_width="46dp"
+                    android:layout_height="46dp"
+                    android:layout_marginHorizontal="6dp"
+                    android:background="@drawable/bg_add"
+                    android:src="@drawable/baseline_arrow_back_ios_24" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:paddingBottom="20dp"
+                    android:text="Add Transaction"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <EditText
+                android:id="@+id/inp_amount"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/bg_edittext_rounded"
+                android:hint="$$$"
+                android:inputType="numberDecimal"
+                android:paddingStart="24dp"
+                android:paddingEnd="24dp"
+                android:textColor="@color/black"
+                android:textColorHint="#B0B8C9"
+                android:textSize="16sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/bg_edittext_rounded"
+                android:orientation="horizontal"
+                android:paddingVertical="5dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="24dp"
+                android:textColor="@color/black"
+                android:textColorHint="#B0B8C9"
+                android:textSize="16sp">
+
+                <Button
+                    android:id="@+id/btnSelectDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="4dp"
+                    android:background="@drawable/btn_date"
+                    android:text="Date"
+                    app:backgroundTint="@null" />
+
+                <TextView
+                    android:id="@+id/tvSelectedDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:hint="Note"
+                    android:paddingLeft="20dp"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textColorHint="#B0B8C9" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/inp_desc"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/bg_edittext_rounded"
+                android:gravity="top|start"
+                android:hint="Note"
+                android:inputType="textMultiLine"
+                android:paddingVertical="20dp"
+                android:paddingStart="24dp"
+                android:paddingEnd="24dp"
+                android:textColor="@color/black"
+                android:textColorHint="#B0B8C9"
+                android:textSize="16sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_edittext_rounded"
+                android:padding="8dp">
+
+                <RadioGroup
+                    android:id="@+id/rd_group"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/rd_expense"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/rdbtn_expnese_toggle"
+                        android:button="@null"
+                        android:checked="true"
+                        android:gravity="center"
+                        android:padding="12dp"
+                        android:text="Pengeluaran"
+                        android:textColor="@drawable/rdbtn_set_text"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/rd_revenue"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/rdbtn_revenue_toggle"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:padding="12dp"
+                        android:text="Pemasukan"
+                        android:textColor="@drawable/rdbtn_set_text"
+                        android:textStyle="bold" />
+                </RadioGroup>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="Deskripsi Pengeluaran"/>
-
-        <EditText
-            android:id="@+id/inp_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Tanggal Pengeluaran"
-            android:inputType="date" />
-
-        <EditText
-            android:id="@+id/inp_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="tipe 1 or 0"
-            android:inputType="text" />
-
-        <Button
-            android:id="@+id/btn_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="submit"/>
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="bottom">
+            <Button
+                android:id="@+id/btn_submit"
+                android:layout_marginLeft="10dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="SAVE"
+                android:textStyle="bold"
+                android:background="@drawable/btn_save"
+                app:backgroundTint="@null"/>
+        </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
