--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -83,7 +83,15 @@
         </RadioGroup>
     </LinearLayout>
 
-
+    <ImageButton
+        android:id="@+id/btn_input"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:background="@drawable/bg_add"
+        android:src="@drawable/baseline_add_24"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="6dp"
+        />
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
