--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetailActivity"
+    android:background="@color/bone"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,21 +15,35 @@
         android:padding="20dp"
         android:background="@color/bone"
         >
-      <ImageButton
-          android:id="@+id/btn_dashboard"
-          android:layout_width="46dp"
-          android:layout_height="46dp"
-          android:background="@drawable/bg_add"
-          android:src="@drawable/baseline_arrow_back_ios_24"
-          android:layout_marginHorizontal="6dp"
-          />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@drawable/bg_detail"
-    android:padding="20dp"
-    android:layout_marginTop="10dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+           >
+            <ImageButton
+                android:id="@+id/btn_dashboard"
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                android:background="@drawable/bg_add"
+                android:src="@drawable/baseline_arrow_back_ios_24"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Details"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/bg_detail"
+            android:padding="20dp"
+            android:layout_marginTop="10dp">
 
      <LinearLayout
          android:layout_width="match_parent"
@@ -57,44 +72,107 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingVertical="20dp"
+            android:paddingVertical="30dp"
             android:paddingHorizontal="10dp">
-            <TextView
-                android:id="@+id/show_id"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Id"
-                android:textSize="16dp"
                 android:paddingBottom="10dp"
-                />
-            <TextView
-                android:id="@+id/show_amount"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="Transaction ID"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    android:textColor="#808080"
+                    />
+                <TextView
+                    android:id="@+id/show_id"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="18"
+                    android:textSize="18dp"
+                    android:gravity="end"
+                    />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="amount"
                 android:paddingBottom="10dp"
-                android:textSize="16dp"
-                tools:layout_editor_absoluteX="177dp"
-                tools:layout_editor_absoluteY="278dp" />
-            <TextView
-                android:id="@+id/show_desc"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="Date"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    android:textColor="#808080"
+                    />
+                <TextView
+                    android:id="@+id/show_date"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="25-6-2025"
+                    android:textSize="18dp"
+                    android:gravity="end"
+                    />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="descript"
                 android:paddingBottom="10dp"
-                android:textSize="16dp"
-                tools:layout_editor_absoluteX="174dp"
-                tools:layout_editor_absoluteY="236dp" />
-            <TextView
-                android:id="@+id/show_date"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="Amount"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    android:textColor="#808080"
+                    />
+                <TextView
+                    android:id="@+id/show_amount"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="IDR 120.000"
+                    android:textSize="18dp"
+                    android:gravity="end"
+                    />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16dp"
-                android:paddingBottom="10dp"
-                android:text="date"
-                tools:layout_editor_absoluteX="180dp"
-                tools:layout_editor_absoluteY="330dp" />
-
+                android:paddingVertical="10dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Note"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    android:textColor="#808080"
+                    android:paddingBottom="6dp"
+                    />
+                <TextView
+                    android:id="@+id/show_desc"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="Bayar hutang ke temen"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    />
+            </LinearLayout>
         </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -138,6 +216,45 @@
       </LinearLayout>
     </LinearLayout>
 </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingVertical="10dp"
+            android:background="@drawable/headbg"
+            android:padding="10dp">
 
+            <ImageButton
+                android:id="@+id/btn_home"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:src="@drawable/round_home_24"
+                android:text="View Income" />
+            <ImageButton
+                android:id="@+id/btn_input"
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                android:background="@drawable/bg_add"
+                android:src="@drawable/round_add_24"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="6dp"
+                />
+            <ImageButton
+                android:id="@+id/btn_show_transaction"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:src="@drawable/round_dns_24"
+                android:text="View Income" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
