--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/bone"
     tools:context=".EditActivity">
 
 
@@ -34,79 +35,106 @@
         android:padding="20dp"
         android:background="@color/bone"
         >
-        <ImageButton
-            android:id="@+id/btn_dashboard"
-            android:layout_width="46dp"
-            android:layout_height="46dp"
-            android:background="@drawable/bg_add"
-            android:src="@drawable/baseline_arrow_back_ios_24"
-            android:layout_marginHorizontal="6dp"
-            />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <ImageButton
+                android:id="@+id/btn_dashboard"
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                android:background="@drawable/bg_add"
+                android:src="@drawable/baseline_arrow_back_ios_24"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="Edit Transaction"
+                android:textSize="20sp"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_horizontal"
             android:layout_marginTop="20dp">
-            <TextView
-                android:id="@+id/tv_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expense"
-                android:layout_marginTop="6dp"
-                android:layout_marginRight="10dp"
-                android:textSize="20dp" />
             <ImageView
                 android:id="@+id/iv_icon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/baseline_arrow_downward_24"
                 android:background="@drawable/bg_icon" />
+            <TextView
+                android:id="@+id/tv_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Expense"
+                android:layout_marginTop="6dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:textSize="20dp" />
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="19-6-2025"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:textColor="#7C7C7C"
+                android:layout_marginLeft="20dp"
+                />
         </LinearLayout>
-          <TextView
-              android:id="@+id/show_date"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="19-6-2025"
-              android:gravity="center"
-              tools:layout_editor_absoluteX="189dp"
-              tools:layout_editor_absoluteY="439dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingVertical="30dp">
-
+            android:layout_marginTop="20dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Amount"
-                android:layout_marginLeft="10dp"
-                tools:layout_editor_absoluteX="189dp"
-                tools:layout_editor_absoluteY="439dp" />
+                android:layout_marginLeft="6dp"
+                android:paddingBottom="6dp"
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:textColor="#7C7C7C"
+                />
             <EditText
                 android:id="@+id/inp_amount"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/bg_edittext_rounded"
-                android:hint="$$$"
+                android:hint="150000"
                 android:inputType="numberDecimal"
                 android:paddingStart="24dp"
                 android:paddingEnd="24dp"
                 android:textColor="@color/black"
                 android:textColorHint="#B0B8C9"
                 android:textSize="16sp" />
-
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Note"
-                android:layout_marginLeft="10dp"
-                tools:layout_editor_absoluteX="189dp"
-                tools:layout_editor_absoluteY="439dp" />
-
+                android:layout_marginLeft="6dp"
+                android:paddingBottom="6dp"
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:textColor="#7C7C7C"
+                />
             <EditText
                 android:id="@+id/inp_desc"
                 android:layout_width="match_parent"
@@ -114,7 +142,7 @@
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/bg_edittext_rounded"
                 android:gravity="top|start"
-                android:hint="Note"
+                android:hint="Netflix monthly subcription..."
                 android:inputType="textMultiLine"
                 android:paddingVertical="20dp"
                 android:paddingStart="24dp"
@@ -122,22 +150,21 @@
                 android:textColor="@color/black"
                 android:textColorHint="#B0B8C9"
                 android:textSize="16sp" />
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:gravity="bottom">
-                    <Button
-                        android:id="@+id/btn_submit"
-                        android:layout_marginLeft="10dp"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:text="SAVE"
-                        android:textStyle="bold"
-                        android:background="@drawable/btn_save"
-                        app:backgroundTint="@null"/>
-            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="bottom">
+            <Button
+                android:id="@+id/btn_submit"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="SAVE"
+                android:textStyle="bold"
+                android:background="@drawable/btn_save"
+                app:backgroundTint="@null"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
