--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".InputActivity"
+    android:background="@color/bone"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,47 +18,61 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="30dp">
-
+                >
                 <ImageButton
                     android:id="@+id/btn_dashboard"
                     android:layout_width="46dp"
                     android:layout_height="46dp"
-                    android:layout_marginHorizontal="6dp"
                     android:background="@drawable/bg_add"
-                    android:src="@drawable/baseline_arrow_back_ios_24" />
+                    android:src="@drawable/baseline_arrow_back_ios_24"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="Add Transaction"
+                    android:textSize="20sp"
+                    android:layout_centerInParent="true"
+                    android:layout_centerVertical="true" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="40dp">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:paddingBottom="20dp"
-                    android:text="Add Transaction"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-
-            <EditText
-                android:id="@+id/inp_amount"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/bg_edittext_rounded"
-                android:hint="$$$"
-                android:inputType="numberDecimal"
-                android:paddingStart="24dp"
-                android:paddingEnd="24dp"
-                android:textColor="@color/black"
-                android:textColorHint="#B0B8C9"
-                android:textSize="16sp" />
+                    android:text="Amount"
+                    android:layout_marginLeft="6dp"
+                    android:paddingBottom="6dp"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:textColor="#7C7C7C"
+                    />
+                <EditText
+                    android:id="@+id/inp_amount"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/bg_edittext_rounded"
+                    android:hint="150000"
+                    android:inputType="numberDecimal"
+                    android:paddingStart="24dp"
+                    android:paddingEnd="24dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#B0B8C9"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -86,28 +101,43 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:hint="Note"
+                    android:hint="25-6-2025"
                     android:paddingLeft="20dp"
                     android:text=""
                     android:textColor="@color/black"
                     android:textColorHint="#B0B8C9" />
             </LinearLayout>
-
-            <EditText
-                android:id="@+id/inp_desc"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/bg_edittext_rounded"
-                android:gravity="top|start"
-                android:hint="Note"
-                android:inputType="textMultiLine"
-                android:paddingVertical="20dp"
-                android:paddingStart="24dp"
-                android:paddingEnd="24dp"
-                android:textColor="@color/black"
-                android:textColorHint="#B0B8C9"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Note"
+                    android:layout_marginLeft="6dp"
+                    android:paddingBottom="6dp"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:textColor="#7C7C7C"
+                    />
+                <EditText
+                    android:id="@+id/inp_desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/bg_edittext_rounded"
+                    android:gravity="top|start"
+                    android:hint="Netflix monthly subcription..."
+                    android:inputType="textMultiLine"
+                    android:paddingVertical="20dp"
+                    android:paddingStart="24dp"
+                    android:paddingEnd="24dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#B0B8C9"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -131,7 +161,7 @@
                         android:checked="true"
                         android:gravity="center"
                         android:padding="12dp"
-                        android:text="Pengeluaran"
+                        android:text="Expenses"
                         android:textColor="@drawable/rdbtn_set_text"
                         android:textStyle="bold" />
 
@@ -144,7 +174,7 @@
                         android:button="@null"
                         android:gravity="center"
                         android:padding="12dp"
-                        android:text="Pemasukan"
+                        android:text="Income"
                         android:textColor="@drawable/rdbtn_set_text"
                         android:textStyle="bold" />
                 </RadioGroup>
@@ -158,7 +188,6 @@
             android:gravity="bottom">
             <Button
                 android:id="@+id/btn_submit"
-                android:layout_marginLeft="10dp"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
