--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,28 +6,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
+    android:background="@color/bone"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="20dp"
         android:background="@color/bone">
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Home"
-            android:textSize="20sp"
-            android:layout_gravity="center"
-            android:paddingBottom="20dp"
-            android:textStyle="bold"/>
+            android:padding="8dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Home"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/headbg"
-            android:padding="30dp">
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="40dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -141,8 +149,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingTop="20dp"
-                android:paddingBottom="10dp">
+                android:paddingTop="30dp"
+                android:paddingBottom="10dp"
+                >
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight="1"
@@ -150,56 +159,71 @@
                     android:text="Recent Transactions"
                     android:textStyle="bold"
                     android:textSize="20dp"
-                    android:layout_marginRight="20dp"/>
+                    android:layout_marginLeft="10dp"/>
+
+                <Button
+                    android:id="@+id/btn_viewall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:text="View All"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:textColor="#CC757575"
+                    android:background="@android:color/transparent"
+                    android:elevation="0dp"
+                    android:stateListAnimator="@null"
+                />
+
             </LinearLayout>
 
             <ListView
                 android:id="@+id/list_transactions"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:divider="#00000000"
-                android:dividerHeight="8dp" />
+                android:dividerHeight="8dp"
+                android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
+<!--        navbar -->
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingVertical="10dp"
-            android:background="@drawable/headbg"
-            android:padding="10dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingVertical="10dp"
+                android:background="@drawable/headbg"
+                android:padding="10dp">
 
-<!--            |-->
-<!--            | INI BTN KE ALL TRANSACTION-->
-<!--            |-->
-<!--            V-->
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_show_transaction"
-                android:textSize="16dp"
-                android:text="View Income"
-                android:background="@android:color/transparent"
-                />
-            <ImageButton
-                android:id="@+id/btn_input"
-                android:layout_width="46dp"
-                android:layout_height="46dp"
-                android:background="@drawable/bg_add"
-                android:src="@drawable/baseline_add_24"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="6dp"
-                />
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_show_expense"
-                android:textSize="16dp"
-                android:text="hapus ni btn"
-                android:background="@android:color/transparent"
-                />
-        </LinearLayout>
+                <ImageButton
+                    android:id="@+id/btn_home"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/round_home_24"
+                    android:text="View Income" />
+                <ImageButton
+                    android:id="@+id/btn_input"
+                    android:layout_width="46dp"
+                    android:layout_height="46dp"
+                    android:background="@drawable/bg_add"
+                    android:src="@drawable/round_add_24"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="6dp"
+                    />
+                <ImageButton
+                    android:id="@+id/btn_show_transaction"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/round_dns_24"
+                    android:text="View Income" />
+            </LinearLayout>
+        <!--        navbar end -->
     </LinearLayout>
-
 
 </LinearLayout>
